--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^4.x.x",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
