--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Python
 venv/
 env/
+__pycache__/
+*.pyc
+.cache/
+
+# Environment variables (API keys)
+.env
+agent/.env
