--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.x.x",
+    "react-markdown": "^10.1.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
