--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/react": "^16.1.0",
+    "@vercel/analytics": "^1.6.1",
     "cra-template": "1.2.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
